# hrl-haptic-manip

./: LICENSE.txt  README  stack.xml
hrl_common_code_darpa_m3/: CMakeLists.txt  manifest.xml  package.xml  setup.py
hrl_common_code_darpa_m3/launch/: optitrak.launch
hrl_common_code_darpa_m3/scripts/: viz
hrl_dynamic_mpc/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
hrl_dynamic_mpc/etc/: tube_with_ati_collisions.dae
hrl_dynamic_mpc/launch/: darci.launch  darci_merry.launch  darci_pippin.launch  darci_pippin_pp.launch  darci_sim.launch  darci_tactile_sleeve.launch
hrl_dynamic_mpc/matlab_files/: README  mpc_model_control_robot.mdl  mpc_model_control_robot_with_forces.mdl  mpc_model_control_robot_with_forces.mdl.r2012a  run_control_tests_no_force_vary_time_horizon_kreacher.m  run_control_tests_no_force_vary_time_horizon_kreacher_QS.m  run_control_tests_no_force_vary_time_horizon_single_link.m  run_control_tests_no_force_vary_time_horizon_single_link_QS.m  run_control_tests_no_obstacles_testing_model_prediction.m  run_control_tests_with_force.m  run_control_tests_with_force_and_model_prediction.m  run_control_tests_with_force_kreacher.m  run_control_tests_with_force_vary_stiffness_and_delta_t.m  run_control_tests_with_obstacles_testing_model_prediction.m  run_multiple_control_tests_with_force_varying_parameters.m
hrl_dynamic_mpc/meshes/: Darci_Flipper.stl  Darci_Forearmor.stl  stub_end_effector_mini45.dae  wedge_blender.dae
hrl_dynamic_mpc/src/: capture_sys_id_data.py  dMdq_func.py  darci_arm_kinematics.py  darci_client.py  darci_left_dyn_params.py  darci_left_dynamics.py  darci_sim_client.py  data_rosbag_recorder.py  data_state_recorder.py  dynamics_utils.py  nlp_opt_traj_final.py  print_angles.py  record_angles.py  run_controller.py  single_contact_estimate.py  single_contact_estimate_v2.py  skin_client.py  var_comp_optimize.py
hrl_dynamic_mpc/srv/: LogData.srv
hrl_dynamic_mpc/system_ID_data/: faster_left_arm_traj_1.pkl  faster_left_arm_traj_2.pkl  left_arm_data_1.pkl  left_arm_traj_1.pkl
hrl_fabric_based_tactile_sensor/: CMakeLists.txt  manifest.xml  package.xml  setup.py
hrl_fabric_based_tactile_sensor/launch/: ati_fts.launch  calibration_ft.launch  cody_tactile_flipper.launch  cody_tactile_flipper_viz.launch  cody_tactile_sleeve.launch  cody_tactile_sleeve_viz.launch  darci_forearmor.launch  darci_forearmor_viz.launch  darci_sim_taxel_viz.launch  darci_tactile_flipper.launch  fabric_sensor.launch  pr2_tactile_sleeve.launch  pr2_tactile_sleeve_base.launch  pr2_tactile_sleeve_base_viz.launch  pr2_tactile_sleeve_both_arms.launch  pr2_tactile_sleeve_both_arms_viz.launch  pr2_tactile_sleeve_combined.launch  pr2_tactile_sleeve_viz.launch  pr2_tactile_test_pps.launch  pr2sim_tactile_sleeve_viz.launch  setup_cody_for_mpc.launch  setup_pr2_for_mpc.launch
hrl_fabric_based_tactile_sensor/misc/: 10-ROBOT.rules
hrl_fabric_based_tactile_sensor/viz_config/: cody_tactile_sleeve.vcg  pr2_teleop_rviz.vcg  teleop_rviz.vcg
hrl_haptic_manip_dev/: CMakeLists.txt  package.xml
hrl_haptic_manipulation_in_clutter_msgs/: CMakeLists.txt  manifest.xml  package.xml
hrl_haptic_manipulation_in_clutter_msgs/msg/: ContactTable.msg  GazeboObjectArray.msg  GazeboObjectState.msg  HapticMpcWeights.msg  MpcDynFormattedData.msg  RobotHapticState.msg  SkinContact.msg  TaxelArray.msg
hrl_haptic_manipulation_in_clutter_srvs/: CMakeLists.txt  manifest.xml  package.xml
hrl_haptic_manipulation_in_clutter_srvs/srv/: GazeboObjectArray.srv  GetJep.srv  MpcFormatted.srv  ServiceLIC.srv
hrl_haptic_mpc/: CMakeLists.txt  cody_config_params.yaml  darci_sim_config_params.yaml  darpa_config_param.yaml  kreacher_config_param.yaml  manifest.xml  mpc_params_cody.yaml  mpc_params_darci_sim.yaml  mpc_params_pr2.yaml  mpc_params_sim3.yaml  package.xml  pr2_config_params.yaml  pr2_sim_config_params.yaml  setup.py  sim3_config_params.yaml
hrl_haptic_mpc/launch/: start_cody_mpc_fabric.launch  start_cody_mpc_meka.launch  start_darci_sim_mpc.launch  start_pr2_mpc.launch  start_sim_mpc.launch
hrl_haptic_mpc/params/: cody_config_params.yaml  crona_config_params.yaml  darci_config_params.yaml  darci_sim_config_params.yaml  darpa_config_param.yaml  kreacher_config_param.yaml  mpc_params_cody.yaml  mpc_params_darci_sim.yaml  mpc_params_pr2.yaml  mpc_params_sim3.yaml  pr2_l_config_params.yaml  pr2_r_config_params.yaml  pr2_sim_config_params.yaml  sim3_config_params.yaml  sim_equal_links_1_config_params.yaml
hrl_haptic_mpc/scripts/: haptic_mpc  mpc_reset  mpc_teleop_rviz  mpc_teleop_rviz_head  robot_haptic_state_node  runstop_safe_restart  waypoint_generator
hrl_haptic_mpc/viz_config/: mpc_viz.vcg  mpc_viz_haptic_map.vcg
hrl_meka_skin_sensor_darpa_m3/: CMakeLists.txt  manifest.xml  package.xml  setup.py
hrl_meka_skin_sensor_darpa_m3/launch/: forearm_skin_sensor_viz.launch  setup_for_control_using_skin.launch
hrl_meka_skin_sensor_darpa_m3/viz_config/: control_with_skin_sensor.vcg  forearm_skin_sensor_viz.vcg
m3skin_ros/: CMakeLists.txt  manifest.xml  package.xml
m3skin_ros/.svn/: entries
m3skin_ros/msg/: TaxelArray.msg
m3skin_viz/: CMakeLists.txt  package.xml
m3skin_viz/.svn/: entries
m3skin_viz/src/: RosPressureVisualizer.cpp  RosPressureVisualizer.h
sandbox_marc_darpa_m3/: CMakeLists.txt  get_controller_files.py  manifest.xml  test.yaml
sandbox_marc_darpa_m3/create_env_interact_markers/: darpa_m3_custom_dict.pkl  make_planar_environments.py  record_current_interactive_position.py
sandbox_marc_darpa_m3/deprecated/: demo_kinematic.cpp  demo_kinematic2.cpp  draw_scene.py
sandbox_marc_darpa_m3/include/: mpc_dyn_controller.h  mpc_qs_controller.h  one_link_mpc_lin_dyn.h  proximity_3_link_qs_mpc.h  proximity_7_link_qs_mpc.h  solver.h  three_link_mpc_lin_dyn.h
sandbox_marc_darpa_m3/launch/: start_sim_mpc.launch  teleop.launch  teleop.sh  teleop_controller.launch  teleop_tf.launch  teleop_tf_left.launch
sandbox_marc_darpa_m3/msg/: ImpedMap.msg  OptTest.msg
sandbox_marc_darpa_m3/scripts/: analyze_mult_trials.sh  analyze_multiple_files.sh  compare_delta_t.py  (+32 more)
(+874 files in other folders)
