<package>
  <name>hrl_common_code_darpa_m3</name>
  <version>0.0.0</version>
  <description>hrl_common_code_darpa_m3</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_common_code_darpa_m3</url>

  <author>Advait Jain</author>
  <author>Marc Killpack. Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab</author>
  <author>Georgia Tech</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>hrl_haptic_manipulation_in_clutter_msgs</build_depend>
  <build_depend>hrl_lib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>m3skin_ros</build_depend>
  <build_depend>pykdl_utils</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hrl_haptic_manipulation_in_clutter_msgs</run_depend>
  <run_depend>hrl_lib</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>m3skin_ros</run_depend>
  <run_depend>pykdl_utils</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>hrl_haptic_manipulation_in_clutter_msgs</test_depend> -->
  <!-- <test_depend>hrl_lib</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>m3skin_ros</test_depend> -->
  <!-- <test_depend>pykdl_utils</test_depend> -->

</package>