<package>
  <name>hrl_haptic_manipulation_in_clutter_msgs</name>
  <version>0.0.0</version>
  <description>hrl_haptic_manipulation_in_clutter_msgs</description>

  <maintainer email="deric.park@gatech.edu">Daehyung Park. Advisor: Prof. Charlie Kemp.
        Healthcare Robotics Lab, Georgia Tech.</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_haptic_manipulation_in_clutter_msgs</url>

  <author>Advait Jain</author>
  <author>Marc Killpack. Advisor: Prof. Charlie Kemp.
        Healthcare Robotics Lab, Georgia Tech.</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hrl_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hrl_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>hrl_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>