<package>
  <name>m3skin_ros</name>
  <version>0.0.0</version>
  <description>m3skin_ros</description>

  <maintainer email="deric.park@gatech.edu">Daehyung Park. Advisor: Prof. Charlie Kemp.
  Healthcare Robotics Lab, Georgia Tech.</maintainer>
  <!--maintainer email="">Meka Robotics</maintainer-->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/m3ros</url>

  <author>Meka Robotics</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hrl_haptic_manipulation_in_clutter_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hrl_haptic_manipulation_in_clutter_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>hrl_haptic_manipulation_in_clutter_msgs</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>