<package>
  <name>m3skin_viz</name>
  <version>0.0.0</version>
  <description>Subscribes to a data publisher and send marker messages
to RViz to visualize the pressure on the skin.</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park. Advisor: Prof. Charlie Kemp.
        Healthcare Robotics Lab, Georgia Tech.</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/m3skin_viz</url>

  <author>Meka Robotics</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>m3skin_ros</build_depend>
  <build_depend>hrl_haptic_manipulation_in_clutter_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>m3skin_ros</run_depend>
  <run_depend>hrl_haptic_manipulation_in_clutter_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>m3skin_ros</test_depend> -->
  <!-- <test_depend>hrl_haptic_manipulation_in_clutter_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

</package>